2011-07-11  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-mixed-18.patch: Add a test for PR ld/12982.

2011-07-11  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-mixed-18.patch: New file. Replace ...
	* binutils-lto-mixed-17.patch: This. Removed.

	* binutils-pr12942-1.patch: Removed.

	* README: Updated.

2011-07-04  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-pr12942-1.patch: New.
	* README: Apply it.

2011-06-20  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-x32-1.patch: New.
	* README: Apply it.

2011-05-25  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-error-13.patch: New file. Replace ...
	* binutils-error-12.patch: This. Removed.

	* binutils-shr-98.patch: New file. Replace ...
	* binutils-shr-97.patch: This. Removed.

	* README: Updated.

2011-05-17  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-mixed-17.patch: Updated.  Add -plugin-save-temps.

2011-05-15  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-mixed-17.patch: Call bfd_link_repair_undef_list
	when undefining symbols from plugin dummy.

2011-05-14  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-mixed-17.patch: New file. Replace ...
	* binutils-lto-mixed-16.patch: This. Removed.
	* README: Likewise.

2011-04-24  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-mixed-16.patch: New file. Replace ...
	* binutils-lto-mixed-15.patch: This. Removed.
	* README: Likewise.

2011-04-20  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-mixed-15.patch: New file. Replace ...
	* binutils-lto-mixed-13.patch: This. Removed.
	* README: Likewise.

2011-04-08  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-pr12639-2.patch: New.
	* README: Apply it.

2011-04-08  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-shr-97.patch: New file. Replace ...
	* binutils-shr-96.patch: This. Removed.
	* README: Likewise.

2011-03-12  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-mixed-13.patch: New file. Replace ...
	* binutils-lto-mixed-12.patch: This. Removed.
	* README: Likewise.

2011-02-26  H.J. Lu  <hjl.tools@gmail.com>
