@@ -17,7 +17,7 @@ clean=$1
 
 patches="
 	binutils-indirect-4.patch
-	binutils-shr-98.patch
+	binutils-shr-99.patch
 	binutils-error-13.patch
 	binutils-signed-8.patch
 	binutils-weakdef-2.patch
