@@ -131,10 +131,10 @@ ld/
 	* scripttempl/elf.sc: Support sharable sections.
 
 diff --git a/bfd/elf-bfd.h b/bfd/elf-bfd.h
-index b34845b..924fd08 100644
+index e6ea580..a43057b 100644
 --- a/bfd/elf-bfd.h
 +++ b/bfd/elf-bfd.h
-@@ -2106,6 +2106,28 @@ extern bfd_boolean bfd_elf_link_add_symbols
+@@ -2114,6 +2114,28 @@ extern bfd_boolean bfd_elf_link_add_symbols
    (bfd *, struct bfd_link_info *);
  extern bfd_boolean _bfd_elf_add_dynamic_entry
    (struct bfd_link_info *, bfd_vma, bfd_vma);
@@ -164,7 +164,7 @@ index b34845b..924fd08 100644
  extern bfd_boolean bfd_elf_link_record_dynamic_symbol
    (struct bfd_link_info *, struct elf_link_hash_entry *);
 diff --git a/bfd/elf.c b/bfd/elf.c
-index 3d44ef8..717ad94 100644
+index aa40c33..d03f58c 100644
 --- a/bfd/elf.c
 +++ b/bfd/elf.c
 @@ -2092,6 +2092,8 @@ static const struct bfd_elf_special_section special_sections_g[] =
@@ -320,29 +320,29 @@ index 3d44ef8..717ad94 100644
  	      && (this_hdr->sh_type != SHT_NOBITS
  		  || ((this_hdr->sh_flags & SHF_ALLOC) != 0
 diff --git a/bfd/elf32-i386.c b/bfd/elf32-i386.c
-index ee1511f..c5cdada 100644
+index 38c7c5a..51cbcf5 100644
 --- a/bfd/elf32-i386.c
 +++ b/bfd/elf32-i386.c
-@@ -687,6 +687,9 @@ struct elf_i386_link_hash_table
+@@ -806,6 +806,9 @@ struct elf_i386_link_hash_table
  
-   /* Value used to fill the last word of the first plt entry.  */
-   bfd_byte plt0_pad_byte;
+   /* The index of the next unused R_386_TLS_DESC slot in .rel.plt.  */
+   bfd_vma next_tls_desc_index;
 +
 +  asection *sdynsharablebss;
 +  asection *srelsharablebss;
  };
  
  /* Get the i386 ELF linker hash table from a link_info structure.  */
-@@ -828,6 +831,8 @@ elf_i386_link_hash_table_create (bfd *abfd)
+@@ -946,6 +949,8 @@ elf_i386_link_hash_table_create (bfd *abfd)
+   ret->sym_cache.abfd = NULL;
    ret->srelplt2 = NULL;
-   ret->plt0_pad_byte = 0;
    ret->tls_module_base = NULL;
 +  ret->sdynsharablebss = NULL;
 +  ret->srelsharablebss = NULL;
  
    ret->loc_hash_table = htab_try_create (1024,
  					 elf_i386_local_htab_hash,
-@@ -876,10 +881,19 @@ elf_i386_create_dynamic_sections (bfd *dynobj, struct bfd_link_info *info)
+@@ -994,10 +999,19 @@ elf_i386_create_dynamic_sections (bfd *dynobj, struct bfd_link_info *info)
  
    htab->sdynbss = bfd_get_section_by_name (dynobj, ".dynbss");
    if (!info->shared)
@@ -363,8 +363,8 @@ index ee1511f..c5cdada 100644
 +	      || !htab->srelsharablebss)))
      abort ();
  
-   if (htab->is_vxworks
-@@ -2055,17 +2069,23 @@ elf_i386_adjust_dynamic_symbol (struct bfd_link_info *info,
+   if (get_elf_i386_backend_data (dynobj)->is_vxworks
+@@ -2193,17 +2207,23 @@ elf_i386_adjust_dynamic_symbol (struct bfd_link_info *info,
       both the dynamic object and the regular object will refer to the
       same memory location for the variable.  */
  
@@ -391,7 +391,7 @@ index ee1511f..c5cdada 100644
    return _bfd_elf_adjust_dynamic_copy (h, s);
  }
  
-@@ -2618,6 +2638,7 @@ elf_i386_size_dynamic_sections (bfd *output_bfd ATTRIBUTE_UNUSED,
+@@ -2750,6 +2770,7 @@ elf_i386_size_dynamic_sections (bfd *output_bfd, struct bfd_link_info *info)
  	  || s == htab->elf.sgotplt
  	  || s == htab->elf.iplt
  	  || s == htab->elf.igotplt
@@ -399,7 +399,7 @@ index ee1511f..c5cdada 100644
  	  || s == htab->sdynbss)
  	{
  	  /* Strip this section if we don't need it; see the
-@@ -4415,21 +4436,27 @@ do_glob_dat:
+@@ -4569,21 +4590,27 @@ do_glob_dat:
      {
        Elf_Internal_Rela rel;
        bfd_byte *loc;
@@ -430,7 +430,7 @@ index ee1511f..c5cdada 100644
        bfd_elf32_swap_reloc_out (output_bfd, &rel, loc);
      }
  
-@@ -4726,7 +4753,8 @@ elf_i386_add_symbol_hook (bfd * abfd,
+@@ -4913,7 +4940,8 @@ elf_i386_add_symbol_hook (bfd * abfd,
  	  || ELF_ST_BIND (sym->st_info) == STB_GNU_UNIQUE))
      elf_tdata (info->output_bfd)->has_gnu_symbols = TRUE;
  
@@ -440,7 +440,7 @@ index ee1511f..c5cdada 100644
  }
  
  #define TARGET_LITTLE_SYM		bfd_elf32_i386_vec
-@@ -4779,6 +4807,19 @@ elf_i386_add_symbol_hook (bfd * abfd,
+@@ -4967,6 +4995,19 @@ elf_i386_add_symbol_hook (bfd * abfd,
  #undef	elf_backend_post_process_headers
  #define	elf_backend_post_process_headers	_bfd_elf_set_osabi
  
@@ -461,10 +461,10 @@ index ee1511f..c5cdada 100644
  
  /* FreeBSD support.  */
 diff --git a/bfd/elf64-x86-64.c b/bfd/elf64-x86-64.c
-index ae175e1..8bb78ee 100644
+index 975b558..55161d4 100644
 --- a/bfd/elf64-x86-64.c
 +++ b/bfd/elf64-x86-64.c
-@@ -515,6 +515,9 @@ struct elf_x86_64_link_hash_table
+@@ -676,6 +676,9 @@ struct elf_x86_64_link_hash_table
    /* The offset into sgot of the GOT entry used by the PLT entry
       above.  */
    bfd_vma tlsdesc_got;
@@ -474,7 +474,7 @@ index ae175e1..8bb78ee 100644
  };
  
  /* Get the x86-64 ELF linker hash table from a link_info structure.  */
-@@ -655,6 +658,8 @@ elf_x86_64_link_hash_table_create (bfd *abfd)
+@@ -817,6 +820,8 @@ elf_x86_64_link_hash_table_create (bfd *abfd)
    ret->tls_ld_got.refcount = 0;
    ret->sgotplt_jump_table_size = 0;
    ret->tls_module_base = NULL;
@@ -483,7 +483,7 @@ index ae175e1..8bb78ee 100644
  
    if (ABI_64_P (abfd))
      {
-@@ -721,10 +726,19 @@ elf_x86_64_create_dynamic_sections (bfd *dynobj,
+@@ -883,10 +888,19 @@ elf_x86_64_create_dynamic_sections (bfd *dynobj,
  
    htab->sdynbss = bfd_get_section_by_name (dynobj, ".dynbss");
    if (!info->shared)
@@ -504,8 +504,8 @@ index ae175e1..8bb78ee 100644
 +	      || !htab->srelsharablebss)))
      abort ();
  
-   return TRUE;
-@@ -2001,6 +2015,8 @@ elf_x86_64_adjust_dynamic_symbol (struct bfd_link_info *info,
+   if (!info->no_ld_generated_unwind_info
+@@ -2188,6 +2202,8 @@ elf_x86_64_adjust_dynamic_symbol (struct bfd_link_info *info,
    if (htab == NULL)
      return FALSE;
  
@@ -514,7 +514,7 @@ index ae175e1..8bb78ee 100644
    /* We must generate a R_X86_64_COPY reloc to tell the dynamic linker
       to copy the initial value out of the dynamic object and into the
       runtime process image.  */
-@@ -2008,12 +2024,16 @@ elf_x86_64_adjust_dynamic_symbol (struct bfd_link_info *info,
+@@ -2195,12 +2211,16 @@ elf_x86_64_adjust_dynamic_symbol (struct bfd_link_info *info,
      {
        const struct elf_backend_data *bed;
        bed = get_elf_backend_data (info->output_bfd);
@@ -534,7 +534,7 @@ index ae175e1..8bb78ee 100644
    return _bfd_elf_adjust_dynamic_copy (h, s);
  }
  
-@@ -2549,6 +2569,7 @@ elf_x86_64_size_dynamic_sections (bfd *output_bfd,
+@@ -2731,6 +2751,7 @@ elf_x86_64_size_dynamic_sections (bfd *output_bfd,
  	  || s == htab->elf.sgotplt
  	  || s == htab->elf.iplt
  	  || s == htab->elf.igotplt
@@ -542,7 +542,7 @@ index ae175e1..8bb78ee 100644
  	  || s == htab->sdynbss)
  	{
  	  /* Strip this section if we don't need it; see the
-@@ -4155,13 +4176,19 @@ do_glob_dat:
+@@ -4345,13 +4366,19 @@ do_glob_dat:
    if (h->needs_copy)
      {
        Elf_Internal_Rela rela;
@@ -563,7 +563,7 @@ index ae175e1..8bb78ee 100644
  	abort ();
  
        rela.r_offset = (h->root.u.def.value
-@@ -4169,7 +4196,7 @@ do_glob_dat:
+@@ -4359,7 +4386,7 @@ do_glob_dat:
  		       + h->root.u.def.section->output_offset);
        rela.r_info = htab->r_info (h->dynindx, R_X86_64_COPY);
        rela.r_addend = 0;
@@ -572,7 +572,7 @@ index ae175e1..8bb78ee 100644
      }
  
    /* Mark _DYNAMIC and _GLOBAL_OFFSET_TABLE_ as absolute.  SYM may
-@@ -4478,7 +4505,8 @@ elf_x86_64_add_symbol_hook (bfd *abfd,
+@@ -4695,7 +4722,8 @@ elf_x86_64_add_symbol_hook (bfd *abfd,
  	  || ELF_ST_BIND (sym->st_info) == STB_GNU_UNIQUE))
      elf_tdata (info->output_bfd)->has_gnu_symbols = TRUE;
  
@@ -582,7 +582,7 @@ index ae175e1..8bb78ee 100644
  }
  
  
-@@ -4494,7 +4522,8 @@ elf_x86_64_elf_section_from_bfd_section (bfd *abfd ATTRIBUTE_UNUSED,
+@@ -4711,7 +4739,8 @@ elf_x86_64_elf_section_from_bfd_section (bfd *abfd ATTRIBUTE_UNUSED,
        *index_return = SHN_X86_64_LCOMMON;
        return TRUE;
      }
@@ -592,7 +592,7 @@ index ae175e1..8bb78ee 100644
  }
  
  /* Process a symbol.  */
-@@ -4512,22 +4541,26 @@ elf_x86_64_symbol_processing (bfd *abfd ATTRIBUTE_UNUSED,
+@@ -4729,22 +4758,26 @@ elf_x86_64_symbol_processing (bfd *abfd ATTRIBUTE_UNUSED,
        asym->value = elfsym->internal_elf_sym.st_size;
        /* Common symbol doesn't set BSF_GLOBAL.  */
        asym->flags &= ~BSF_GLOBAL;
@@ -621,7 +621,7 @@ index ae175e1..8bb78ee 100644
    else
      return SHN_X86_64_LCOMMON;
  }
-@@ -4536,7 +4569,7 @@ static asection *
+@@ -4753,7 +4786,7 @@ static asection *
  elf_x86_64_common_section (asection *sec)
  {
    if ((elf_section_flags (sec) & SHF_X86_64_LARGE) == 0)
@@ -630,7 +630,7 @@ index ae175e1..8bb78ee 100644
    else
      return &_bfd_elf_large_com_section;
  }
-@@ -4573,7 +4606,8 @@ elf_x86_64_merge_symbol (struct bfd_link_info *info ATTRIBUTE_UNUSED,
+@@ -4790,7 +4823,8 @@ elf_x86_64_merge_symbol (struct bfd_link_info *info ATTRIBUTE_UNUSED,
        && h->root.type == bfd_link_hash_common
        && !*newdef
        && bfd_is_com_section (*sec)
@@ -640,7 +640,7 @@ index ae175e1..8bb78ee 100644
      {
        if (sym->st_shndx == SHN_COMMON
  	  && (elf_section_flags (*oldsec) & SHF_X86_64_LARGE) != 0)
-@@ -4581,13 +4615,26 @@ elf_x86_64_merge_symbol (struct bfd_link_info *info ATTRIBUTE_UNUSED,
+@@ -4798,13 +4832,26 @@ elf_x86_64_merge_symbol (struct bfd_link_info *info ATTRIBUTE_UNUSED,
  	  h->root.u.c.p->section
  	    = bfd_make_section_old_way (oldbfd, "COMMON");
  	  h->root.u.c.p->section->flags = SEC_ALLOC;
@@ -670,10 +670,10 @@ index ae175e1..8bb78ee 100644
  
  static int
 diff --git a/bfd/elflink.c b/bfd/elflink.c
-index 4675aab..ba08cd5 100644
+index 2e592f5..a99a0d3 100644
 --- a/bfd/elflink.c
 +++ b/bfd/elflink.c
-@@ -383,6 +383,27 @@ _bfd_elf_create_dynamic_sections (bfd *abfd, struct bfd_link_info *info)
+@@ -384,6 +384,27 @@ _bfd_elf_create_dynamic_sections (bfd *abfd, struct bfd_link_info *info)
  	  if (s == NULL
  	      || ! bfd_set_section_alignment (abfd, s, bed->s->log_file_align))
  	    return FALSE;
@@ -701,7 +701,7 @@ index 4675aab..ba08cd5 100644
  	}
      }
  
-@@ -12804,3 +12825,219 @@ elf_append_rel (bfd *abfd, asection *s, Elf_Internal_Rela *rel)
+@@ -12975,3 +12996,219 @@ elf_append_rel (bfd *abfd, asection *s, Elf_Internal_Rela *rel)
    BFD_ASSERT (loc + bed->s->sizeof_rel <= s->contents + s->size);
    bed->s->swap_reloca_out (abfd, rel, loc);
  }
@@ -922,7 +922,7 @@ index 4675aab..ba08cd5 100644
 +  return TRUE;
 +}
 diff --git a/bfd/elfnn-ia64.c b/bfd/elfnn-ia64.c
-index 1bd59a7..6be1448 100644
+index 3e2ee0b..968d171 100644
 --- a/bfd/elfnn-ia64.c
 +++ b/bfd/elfnn-ia64.c
 @@ -1064,7 +1064,8 @@ elfNN_ia64_add_symbol_hook (bfd *abfd,
@@ -935,7 +935,7 @@ index 1bd59a7..6be1448 100644
  }
  
  /* Return the number of additional phdrs we will need.  */
-@@ -5338,6 +5339,19 @@ elfNN_vms_close_and_cleanup (bfd *abfd)
+@@ -5332,6 +5333,19 @@ elfNN_vms_close_and_cleanup (bfd *abfd)
  #define elf_backend_special_sections	elfNN_ia64_special_sections
  #define elf_backend_default_execstack	0
  
@@ -956,10 +956,10 @@ index 1bd59a7..6be1448 100644
     SHF_LINK_ORDER. But it doesn't set the sh_link or sh_info fields.
     We don't want to flood users with so many error messages. We turn
 diff --git a/binutils/readelf.c b/binutils/readelf.c
-index 6c8b966..7111722 100644
+index a9064c5..e6ac493 100644
 --- a/binutils/readelf.c
 +++ b/binutils/readelf.c
-@@ -1304,6 +1304,8 @@ dump_relocations (FILE * file,
+@@ -1324,6 +1324,8 @@ dump_relocations (FILE * file,
  			sec_name = "ABS";
  		      else if (psym->st_shndx == SHN_COMMON)
  			sec_name = "COMMON";
@@ -968,7 +968,7 @@ index 6c8b966..7111722 100644
  		      else if ((elf_header.e_machine == EM_MIPS
  				&& psym->st_shndx == SHN_MIPS_SCOMMON)
  			       || (elf_header.e_machine == EM_TI_C6000
-@@ -2756,6 +2758,7 @@ get_segment_type (unsigned long p_type)
+@@ -2781,6 +2783,7 @@ get_segment_type (unsigned long p_type)
      case PT_SHLIB:	return "SHLIB";
      case PT_PHDR:	return "PHDR";
      case PT_TLS:	return "TLS";
@@ -976,7 +976,7 @@ index 6c8b966..7111722 100644
  
      case PT_GNU_EH_FRAME:
  			return "GNU_EH_FRAME";
-@@ -8739,6 +8742,8 @@ get_symbol_index_type (unsigned int type)
+@@ -8799,6 +8802,8 @@ get_symbol_index_type (unsigned int type)
      case SHN_UNDEF:	return "UND";
      case SHN_ABS:	return "ABS";
      case SHN_COMMON:	return "COM";
@@ -986,7 +986,7 @@ index 6c8b966..7111722 100644
        if (type == SHN_IA_64_ANSI_COMMON
  	  && elf_header.e_machine == EM_IA_64
 diff --git a/gas/config/obj-elf.c b/gas/config/obj-elf.c
-index 30eb816..ae3339c 100644
+index 820f1cf..34ea6b6 100644
 --- a/gas/config/obj-elf.c
 +++ b/gas/config/obj-elf.c
 @@ -73,6 +73,7 @@ static void obj_elf_symver (int);
@@ -1065,24 +1065,24 @@ index 30eb816..ae3339c 100644
  	      && ssect->type != SHT_FINI_ARRAY
  	      && ssect->type != SHT_PREINIT_ARRAY)
 diff --git a/include/bfdlink.h b/include/bfdlink.h
-index bb62fbe..d5941fb 100644
+index 71b1e25..231d549 100644
 --- a/include/bfdlink.h
 +++ b/include/bfdlink.h
-@@ -356,6 +356,9 @@ struct bfd_link_info
-   /* Non-NULL if .note.gnu.build-id section should be created.  */
-   char *emit_note_gnu_build_id;
+@@ -383,6 +383,9 @@ struct bfd_link_info
+      --dynamic-list command line options.  */
+   unsigned int dynamic: 1;
  
 +  /* TRUE if sharables sections may be created.  */
 +  unsigned int sharable_sections: 1;
 +
-   /* What to do with unresolved symbols in an object file.
-      When producing executables the default is GENERATE_ERROR.
-      When producing shared libraries the default is IGNORE.  The
+   /* TRUE if PT_GNU_STACK segment should be created with PF_R|PF_W|PF_X
+      flags.  */
+   unsigned int execstack: 1;
 diff --git a/include/elf/common.h b/include/elf/common.h
-index d48c32c..c0c4ea1 100644
+index e46ae33..dec4082 100644
 --- a/include/elf/common.h
 +++ b/include/elf/common.h
-@@ -429,6 +429,7 @@
+@@ -430,6 +430,7 @@
  #define PT_SUNW_EH_FRAME PT_GNU_EH_FRAME      /* Solaris uses the same value */
  #define PT_GNU_STACK	(PT_LOOS + 0x474e551) /* Stack flags */
  #define PT_GNU_RELRO	(PT_LOOS + 0x474e552) /* Read-only after relocation */
@@ -1090,7 +1090,7 @@ index d48c32c..c0c4ea1 100644
  
  /* Program segment permissions, in program header p_flags field.  */
  
-@@ -511,6 +512,8 @@
+@@ -512,6 +513,8 @@
  					   are not to be further
  					   relocated.  */
  
@@ -1099,7 +1099,7 @@ index d48c32c..c0c4ea1 100644
  /* Values of note segment descriptor types for core files.  */
  
  #define NT_PRSTATUS	1		/* Contains copy of prstatus struct */
-@@ -659,6 +662,9 @@
+@@ -662,6 +665,9 @@
  #define STT_LOPROC	13		/* Processor-specific semantics */
  #define STT_HIPROC	15		/* Processor-specific semantics */
  
@@ -1110,10 +1110,10 @@ index d48c32c..c0c4ea1 100644
     become part of an executable or shared library.  */
  
 diff --git a/ld/emulparams/elf32_x86_64.sh b/ld/emulparams/elf32_x86_64.sh
-index 8895e29..8bbccd4 100644
+index d26a67f..e38815a 100644
 --- a/ld/emulparams/elf32_x86_64.sh
 +++ b/ld/emulparams/elf32_x86_64.sh
-@@ -15,6 +15,7 @@ NO_SMALL_DATA=yes
+@@ -16,6 +16,7 @@ NO_SMALL_DATA=yes
  LARGE_SECTIONS=yes
  SEPARATE_GOTPLT=24
  IREL_IN_PLT=
@@ -1131,19 +1131,19 @@ index 7e5e54d..d8cf531 100644
  SMALL_DATA_DTOR=" "
 +SHARABLE_SECTIONS=yes
 diff --git a/ld/emulparams/elf_i386.sh b/ld/emulparams/elf_i386.sh
-index d480811..8268106 100644
+index 1d1e4b4..aaba91e 100644
 --- a/ld/emulparams/elf_i386.sh
 +++ b/ld/emulparams/elf_i386.sh
-@@ -13,3 +13,4 @@ GENERATE_PIE_SCRIPT=yes
+@@ -14,3 +14,4 @@ GENERATE_PIE_SCRIPT=yes
  NO_SMALL_DATA=yes
  SEPARATE_GOTPLT=12
  IREL_IN_PLT=
 +SHARABLE_SECTIONS=yes
 diff --git a/ld/emulparams/elf_x86_64.sh b/ld/emulparams/elf_x86_64.sh
-index 0e93ad8..c82d6c9 100644
+index a921878..b7aed70 100644
 --- a/ld/emulparams/elf_x86_64.sh
 +++ b/ld/emulparams/elf_x86_64.sh
-@@ -15,6 +15,7 @@ NO_SMALL_DATA=yes
+@@ -16,6 +16,7 @@ NO_SMALL_DATA=yes
  LARGE_SECTIONS=yes
  SEPARATE_GOTPLT=24
  IREL_IN_PLT=
@@ -1152,7 +1152,7 @@ index 0e93ad8..c82d6c9 100644
  if [ "x${host}" = "x${target}" ]; then
    case " $EMULATION_LIBPATH " in
 diff --git a/ld/emultempl/elf32.em b/ld/emultempl/elf32.em
-index 17fb8bf..bfef7a3 100644
+index 9bc363f..d070a53 100644
 --- a/ld/emultempl/elf32.em
 +++ b/ld/emultempl/elf32.em
 @@ -104,6 +104,7 @@ gld${EMULATION_NAME}_before_parse (void)
@@ -1177,7 +1177,7 @@ index 17fb8bf..bfef7a3 100644
        && link_info.combreloc
        && (s->flags & SEC_ALLOC))
 diff --git a/ld/ldmain.c b/ld/ldmain.c
-index 1b4afff..ad70218 100644
+index ec9dcff..ded5b3b 100644
 --- a/ld/ldmain.c
 +++ b/ld/ldmain.c
 @@ -282,6 +282,7 @@ main (int argc, char **argv)
