@@ -1,3 +1,9 @@
+2011-08-01  H.J. Lu  <hjl.tools@gmail.com>
+
+	* binutils-shr-99.patch: New file. Replace ...
+	* binutils-shr-98.patch: This. Removed.
+	* README: Likewise.
+
 2011-07-11  H.J. Lu  <hjl.tools@gmail.com>
 
 	* binutils-lto-mixed-18.patch: Add a test for PR ld/12982.
